tests/snapshots/snapshots__pipeline@thunk_effect_absorb_reject.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/thunk_effect_absorb_reject.pr
---
== tokens ==
VOpen Effect UIdent("Beep") VOpen Ident("beep") LParen KwInt RParen Colon KwUnit VClose VSemi Effect UIdent("Wrap") VOpen Ident("wrap") LParen LParen RParen Arrow KwInt Bang LBrace UIdent("Wrap") Bar Ident("e") RBrace RParen Colon KwInt VClose VSemi Fn Ident("body") LParen RParen Colon KwInt Bang LBrace UIdent("Wrap") Comma UIdent("Beep") RBrace Eq VOpen Ident("beep") LParen Int(IntLit { value: 1, suffix: None }) RParen VSemi Int(IntLit { value: 3, suffix: None }) VClose VSemi Fn Ident("use_wrap") LParen RParen Colon KwInt Bang LBrace UIdent("Wrap") RBrace Eq Ident("wrap") LParen Ident("body") RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Beep",
            params: [],
            ops: [
                EffOp {
                    name: "beep",
                    params: [
                        Int,
                    ],
                    ret: Unit,
                    grade: Many,
                },
            ],
            span: 436..466,
        },
        EffectDecl {
            name: "Wrap",
            params: [],
            ops: [
                EffOp {
                    name: "wrap",
                    params: [
                        Fun(
                            [],
                            Cons(
                                [
                                    EffLabel {
                                        name: "Wrap",
                                        args: [],
                                    },
                                ],
                                Some(
                                    "e",
                                ),
                            ),
                            Int,
                        ),
                    ],
                    ret: Int,
                    grade: Many,
                },
            ],
            span: 468..516,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "body",
            params: [],
            ret: Some(
                Int,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "Wrap",
                        args: [],
                    },
                    EffLabel {
                        name: "Beep",
                        args: [],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Let(
                    "_",
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "beep",
                                ),
                                span: 553..557,
                            },
                            [
                                Spanned {
                                    node: Int(
                                        IntLit {
                                            value: 1,
                                            suffix: None,
                                        },
                                    ),
                                    span: 558..559,
                                },
                            ],
                        ),
                        span: 553..560,
                    },
                    Spanned {
                        node: Int(
                            IntLit {
                                value: 3,
                                suffix: None,
                            },
                        ),
                        span: 563..564,
                    },
                ),
                span: 553..564,
            },
            wheres: [],
            span: 518..564,
        },
        Decl {
            name: "use_wrap",
            params: [],
            ret: Some(
                Int,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "Wrap",
                        args: [],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "wrap",
                        ),
                        span: 597..601,
                    },
                    [
                        Spanned {
                            node: Var(
                                "body",
                            ),
                            span: 602..606,
                        },
                    ],
                ),
                span: 597..607,
            },
            wheres: [],
            span: 566..607,
        },
    ],
}

== types ==
[E5004] Type Error: in `use_wrap`: effect `Beep` not declared in annotation
    ╭─[ <source>:17:32 ]
    │
 17 │ fn use_wrap() : Int ! {Wrap} = wrap(body)
    │                                ─────┬────  
    │                                     ╰────── in `use_wrap`: effect `Beep` not declared in annotation
────╯
